--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ languageCode = "en-US"
 enableInlineShortcodes = true
 pygmentsCodeFences = true
 pygmentsUseClasses = true
-
+googleAnalytics = 'UA-207697668-1'
 
 [params]
   dark = "auto"
